# Chess

./: CMakeLists.txt  main.cpp
controller/: Controller.cpp  Controller.h
drawer/: Drawer.cpp  Drawer.h
figure/figure_headers/: AbstractFigure.h  Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
figure/figure_srcs/: AbstractFigure.cpp  Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
figure_factory/: FigureFactory.cpp  FigureFactory.h
game/: Game.cpp  Game.h
loader/: Loader.cpp  Loader.h
move_validator/: MoveValidator.cpp  MoveValidator.h
parser/: Parser.cpp  Parser.h
